--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
   <parent>
     <groupId>org.xwiki.commons</groupId>
     <artifactId>xwiki-commons-pom</artifactId>
-    <version>5.4.4</version>
+    <version>6.4.5</version>
   </parent>
   <groupId>org.xwiki.contrib</groupId>
   <artifactId>application-google-apps-application</artifactId>
@@ -35,7 +35,7 @@
   <developers>
     <developer>
       <id>ldubost</id>
-      <name>ldubost</name>
+      <name>Ludovic Dubost (XWiki SAS)</name>
     </developer>
   </developers>
  <build>
@@ -56,7 +56,24 @@
       </plugin>
     </plugins>
   </build>
-  <scm>
+  <dependencies>
+     <dependency>
+        <groupId>com.google.api-client</groupId>
+        <artifactId>google-api-client</artifactId>
+        <version>1.20.0</version>
+     </dependency>
+     <dependency>
+	<groupId>com.google.gdata</groupId>
+	<artifactId>core</artifactId>
+	<version>1.47.1</version>
+     </dependency>
+     <dependency>
+	<groupId>com.google.apis</groupId>
+	<artifactId>google-api-services-drive</artifactId>
+	<version>v2-rev174-1.20.0</version>
+     </dependency>
+   </dependencies>
+   <scm>
     <connection>scm:git:git://github.com/xwiki-contrib/application-googleapps.git</connection>
     <developerConnection>scm:git:git@github.com:xwiki-contrib/application-googleapps.git</developerConnection>
     <url>https://github.com/xwiki-contrib/application-googleapps</url>
