--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
   </parent>
   <groupId>org.xwiki.contrib</groupId>
   <artifactId>application-google-apps-application</artifactId>
-  <version>1.0</version>
+  <version>2.0-SNAPSHOT</version>
   <packaging>xar</packaging>
   <name>XWiki Application - Google Apps Application</name>
   <description>This extension allows to connect Google Apps to XWiki</description>
