--- a/pom.xml
+++ b/pom.xml
@@ -27,10 +27,10 @@
     <version>6.4.5</version>
   </parent>
   <groupId>org.xwiki.contrib</groupId>
-  <artifactId>application-google-apps-application</artifactId>
+  <artifactId>application-googleapps</artifactId>
   <version>2.0-SNAPSHOT</version>
   <packaging>xar</packaging>
-  <name>XWiki Application - Google Apps Application</name>
+  <name>XWiki Application - Google Apps</name>
   <description>This extension allows to connect Google Apps to XWiki</description>
   <developers>
     <developer>
