--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
   </parent>
   <groupId>org.xwiki.contrib</groupId>
   <artifactId>application-googleapps</artifactId>
-  <version>2.0-SNAPSHOT</version>
+  <version>2.1</version>
   <packaging>xar</packaging>
   <name>Google Apps Application</name>
   <description>This extension allows to connect Google Apps to XWiki</description>
@@ -85,7 +85,7 @@
     <connection>scm:git:git://github.com/xwiki-contrib/application-googleapps.git</connection>
     <developerConnection>scm:git:git@github.com:xwiki-contrib/application-googleapps.git</developerConnection>
     <url>https://github.com/xwiki-contrib/application-googleapps</url>
-    <tag>HEAD</tag>
+    <tag>application-googleapps-2.1</tag>
   </scm>
   <distributionManagement>
     <repository>
