Configure the app to be a paid one #1

--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,4 @@
 <!--
- *
  * See the NOTICE file distributed with this work for additional
  * information regarding copyright ownership.
  *
@@ -17,81 +16,96 @@
  * License along with this software; if not, write to the Free
  * Software Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA
  * 02110-1301 USA, or see the FSF site: http://www.fsf.org.
- *
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>org.xwiki.commons</groupId>
-    <artifactId>xwiki-commons-pom</artifactId>
-    <version>6.4.5</version>
+    <groupId>com.xwiki.parent</groupId>
+    <artifactId>xwikisas-parent-platform</artifactId>
+    <version>8.5</version>
   </parent>
-  <groupId>org.xwiki.contrib</groupId>
+  <groupId>com.xwiki.googleapps</groupId>
   <artifactId>application-googleapps</artifactId>
   <version>2.1.9-SNAPSHOT</version>
   <packaging>xar</packaging>
-  <name>Google Apps Application</name>
+  <name>Google Apps Integration</name>
   <description>This extension allows to connect Google Apps to XWiki</description>
-  <developers>
-    <developer>
-      <id>ldubost</id>
-      <name>Ludovic Dubost (XWiki SAS)</name>
-    </developer>
-  </developers>
   <properties>
-   <xwiki.extension.features>org.xwiki.contrib:xwiki-application-googleapps</xwiki.extension.features>
+    <licensing.version>1.6</licensing.version>
+    <!-- The list of documents that have an implicit unlimited free license. The users can view these documents without
+      buying a license or getting a trial license, but they cannot edit or delete them. -->
+    <xwiki.extension.licensing.publicDocuments>
+      GoogleApps.WebHome
+    </xwiki.extension.licensing.publicDocuments>
+    <xwiki.extension.licensing.excludedDocuments>
+      GoogleApps.GoogleAppsConfig
+    </xwiki.extension.licensing.excludedDocuments>
+    <!-- <xwiki.extension.licensing.excludedDocuments>
+      GoogleApps.AuthService,
+      GoogleApps.EditInGoogleApps,
+      GoogleApps.GoogleAppsConfigSheet,
+      GoogleApps.ImportFromGoogleApps,
+      GoogleApps.Login,
+      GoogleApps.SynchronizedDocumentClass,
+      GoogleApps.CookieAuthenticationPersistenceStoreTools,
+      GoogleApps.GitHubAppDescriptor,
+      GoogleApps.GoogleAppsConfigTemplate,
+      GoogleApps.Install,
+      GoogleApps.OAuth,
+      GoogleApps.Sync,
+      GoogleApps.WebPreferences,
+      GoogleApps.DriveMacroTest,
+      GoogleApps.GoogleAppsAuthClass,
+      GoogleApps.GoogleAppsConfig,
+      GoogleApps.WebHome,
+      GoogleApps.JSExtension,
+      GoogleApps.RequestMatcherTools,
+      GoogleApps.TestDocumentList,
+      GoogleApps.DriveMacro,
+      GoogleApps.GoogleAppsConfigClass,
+      GoogleApps.Groovy,
+      GoogleApps.LoginExtension,
+      GoogleApps.RetrieveFromGoogleApps,
+      GoogleApps.Translations
+    </xwiki.extension.licensing.excludedDocuments> -->
+    <!-- Name to display by the Extension Manager -->
+    <xwiki.extension.name>Google Apps Integration (Pro)</xwiki.extension.name>
+    <!-- Don't run CLIRR here since there's no Java code. -->
+    <xwiki.clirr.skip>true</xwiki.clirr.skip>
+    <!-- Don't run enforcer here since there's no Java code to avoid java7 requirement. -->
+    <xwiki.enforcer.skip>true</xwiki.enforcer.skip>
   </properties>
-   <build>
-    <!-- Needed to add support for the XAR packaging -->
-    <extensions>
-      <extension>
-        <groupId>org.xwiki.commons</groupId>
-        <artifactId>xwiki-commons-tool-xar-handlers</artifactId>
-        <version>${commons.version}</version>
-      </extension>
-    </extensions>
-    <plugins>
-      <!-- The XAR packaging uses the XAR plugin and thus we need to define what version to use -->
-      <plugin>
-        <groupId>org.xwiki.commons</groupId>
-        <artifactId>xwiki-commons-tool-xar-plugin</artifactId>
-        <version>${commons.version}</version>
-      </plugin>
-    </plugins>
-  </build>
   <dependencies>
-     <dependency>
-        <groupId>com.google.api-client</groupId>
-        <artifactId>google-api-client</artifactId>
-        <version>1.20.0</version>
-     </dependency>
-     <dependency>
-	<groupId>com.google.gdata</groupId>
-	<artifactId>core</artifactId>
-	<version>1.47.1</version>
-     </dependency>
-     <dependency>
-        <groupId>com.google.apis</groupId>
-        <artifactId>google-api-services-plus</artifactId>
-        <version>v1-rev318-1.20.0</version>
-     </dependency>
-     <dependency>
-	<groupId>com.google.apis</groupId>
-	<artifactId>google-api-services-drive</artifactId>
-	<version>v2-rev174-1.20.0</version>
-     </dependency>
-   </dependencies>
-   <scm>
-    <connection>scm:git:git://github.com/xwiki-contrib/application-googleapps.git</connection>
-    <developerConnection>scm:git:git@github.com:xwiki-contrib/application-googleapps.git</developerConnection>
-    <url>https://github.com/xwiki-contrib/application-googleapps</url>
+    <dependency>
+      <groupId>com.xwiki.licensing</groupId>
+      <artifactId>application-licensing-licensor-api</artifactId>
+      <version>${licensing.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.api-client</groupId>
+      <artifactId>google-api-client</artifactId>
+      <version>1.20.0</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.gdata</groupId>
+    	<artifactId>core</artifactId>
+    	<version>1.47.1</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.apis</groupId>
+      <artifactId>google-api-services-plus</artifactId>
+      <version>v1-rev318-1.20.0</version>
+    </dependency>
+    <dependency>
+    	<groupId>com.google.apis</groupId>
+    	<artifactId>google-api-services-drive</artifactId>
+    	<version>v2-rev174-1.20.0</version>
+    </dependency>
+  </dependencies>
+  <scm>
+    <connection>scm:git:git://github.com/xwikisas/application-googleapps.git</connection>
+    <developerConnection>scm:git:git@github.com:xwikisas/application-googleapps.git</developerConnection>
+    <url>https://github.com/xwikisas/application-googleapps</url>
     <tag>HEAD</tag>
   </scm>
-  <distributionManagement>
-    <repository>
-      <id>xwiki-staging</id>
-      <name>XWiki Staging Repository</name>
-      <url>http://nexus.xwiki.org/nexus/service/local/staging/deploy/maven2/</url>
-    </repository>
-  </distributionManagement>
 </project>
