--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
   </parent>
   <groupId>com.xwiki.googleapps</groupId>
   <artifactId>application-googleapps</artifactId>
-  <version>2.3</version>
+  <version>2.4-SNAPSHOT</version>
   <packaging>xar</packaging>
   <name>Google Apps Integration</name>
   <description>This extension allows to connect Google Apps to XWiki</description>
@@ -78,6 +78,6 @@
     <connection>scm:git:git://github.com/xwikisas/application-googleapps.git</connection>
     <developerConnection>scm:git:git@github.com:xwikisas/application-googleapps.git</developerConnection>
     <url>https://github.com/xwikisas/application-googleapps</url>
-    <tag>application-googleapps-2.3</tag>
+    <tag>HEAD</tag>
   </scm>
 </project>
