[Misc] Set extension's category

--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,7 @@
     </xwiki.extension.licensing.excludedDocuments>
     <!-- Name to display by the Extension Manager -->
     <xwiki.extension.name>Google Apps Integration (Pro)</xwiki.extension.name>
+    <xwiki.extension.category>application</xwiki.extension.category>
     <!-- Don't run CLIRR here since there's no Java code. -->
     <xwiki.clirr.skip>true</xwiki.clirr.skip>
     <!-- Don't run enforcer here since there's no Java code to avoid java7 requirement. -->
