--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,6 @@
+<?xml version="1.0" encoding="UTF-8"?>
+
 <!--
- *
  * See the NOTICE file distributed with this work for additional
  * information regarding copyright ownership.
  *
@@ -17,14 +18,14 @@
  * License along with this software; if not, write to the Free
  * Software Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA
  * 02110-1301 USA, or see the FSF site: http://www.fsf.org.
- *
 -->
+
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>org.xwiki.commons</groupId>
-    <artifactId>xwiki-commons-pom</artifactId>
-    <version>6.4.5</version>
+    <groupId>org.xwiki.contrib</groupId>
+    <artifactId>parent-platform</artifactId>
+    <version>8.4-14</version>
   </parent>
   <groupId>org.xwiki.contrib</groupId>
   <artifactId>application-googleapps</artifactId>
@@ -61,24 +62,24 @@
   </build>
   <dependencies>
      <dependency>
-        <groupId>com.google.api-client</groupId>
-        <artifactId>google-api-client</artifactId>
-        <version>1.30.9</version>
+       <groupId>com.google.api-client</groupId>
+       <artifactId>google-api-client</artifactId>
+       <version>1.30.9</version>
      </dependency>
      <dependency>
-	<groupId>com.google.gdata</groupId>
-	<artifactId>core</artifactId>
-	<version>1.47.1</version>
+	      <groupId>com.google.gdata</groupId>
+	      <artifactId>core</artifactId>
+	      <version>1.47.1</version>
      </dependency>
      <dependency>
-	<groupId>com.google.apis</groupId>
-	<artifactId>google-api-services-drive</artifactId>
+	      <groupId>com.google.apis</groupId>
+	      <artifactId>google-api-services-drive</artifactId>
         <version>v2-rev174-1.20.0</version>
      </dependency>
      <dependency>
-	<groupId>com.google.apis</groupId>
-	<artifactId>google-api-services-people</artifactId>
-	<version>v1-rev526-1.25.0</version>
+	     <groupId>com.google.apis</groupId>
+	     <artifactId>google-api-services-people</artifactId>
+	     <version>v1-rev526-1.25.0</version>
      </dependency>
    </dependencies>
    <scm>
@@ -87,11 +88,4 @@
     <url>https://github.com/xwiki-contrib/application-googleapps</url>
     <tag>HEAD</tag>
   </scm>
-  <distributionManagement>
-    <repository>
-      <id>xwiki-staging</id>
-      <name>XWiki Staging Repository</name>
-      <url>http://nexus.xwiki.org/nexus/service/local/staging/deploy/maven2/</url>
-    </repository>
-  </distributionManagement>
 </project>
