--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
   </parent>
   <groupId>org.xwiki.contrib</groupId>
   <artifactId>application-googleapps</artifactId>
-  <version>2.1.9-SNAPSHOT</version>
+  <version>2.1.9</version>
   <packaging>xar</packaging>
   <name>Google Apps Application</name>
   <description>This extension allows to connect Google Apps to XWiki</description>
@@ -86,6 +86,6 @@
     <connection>scm:git:git://github.com/xwiki-contrib/application-googleapps.git</connection>
     <developerConnection>scm:git:git@github.com:xwiki-contrib/application-googleapps.git</developerConnection>
     <url>https://github.com/xwiki-contrib/application-googleapps</url>
-    <tag>HEAD</tag>
+    <tag>application-googleapps-2.1.9</tag>
   </scm>
 </project>
